- vdi/tranfm.S - vr_trnfm() implemented in assembler (MAD)
- vdi/monout.c - rectfill() in C (MAD)
               - habline() uses same sub-routines as rectfill() (MAD)
- vdi/gsxasm1.S - concat() moved to gsxasm2.S, where it is used (MAD)

22. Sep. 2002 
- vdi/monout.c - replaced asm vr_trnfm() by Johan's impl. in C (MAD)
               - fixed bugs in horizontal line drawing modes (MAD)
- vdi/tranfm.S - removed from compile in Makefile (MAD)

25. Sep. 2002 
- vdi/monout.c - fixed bug in color setting (MAD)

27. Sep. 2002 
- vdi/monout.c - optimized horzline() and rectfill()  (MAD)

29. Sep. 2002
- make etoscpr.img makes experimental compressed-RAM-inside-ROM (LVL)
- use make comprtest to test the compressor (LVL)
- bios/memory.s - debug messages optional (LVL)
- added -pedantic to $(NATIVECC) options, killed some warnings in tools (LVL)

30. Sep. 2002
- tools/compr.c et al - added a header in the compressed data, for a cleaner
  handling of the destination address in ROM (LVL)
- Makefile - code factorisation, various optimisations, foo.dsm is 
  desassembly for foo.img (LVL)
- util/comprtst.sh - changed . t into sh -f t for portability (LVL)
- doc/status.txt - changed the table of supported emulators, to include date 
  of update of individual entries (LVL)
- doc/install.txt - documented some of the current makefile targets (LVL)

05. Oct. 2002
- renamed _FOO_H into H_FOO_ for standard C compliance (I kept the script 
  which did it in case anybody wants to change back or again) (LVL)
- bdos/time.[ch] - regrouped stuff here, and connected it to _evt_timer (LVL)
- bdos/rwa.S - removed some useless remnants, osinit now in C (LVL)
- vectors.S - unused vectors _int_timera, ... deleted; priv and illg now
  correctly jump to the default exception vector (LVL)
- tosvars.h, vdimain.c - etv_timer gets an int argument (LVL)
- bios.c - commented out illegal error setting, as I don't think it does the
  right thing [changing a move SR, to CCR, is done pby the priv stuff] (LVL)