@@ -1135,4 +1135,9 @@ Start... early ages
   correctly jump to the default exception vector (LVL)
 - tosvars.h, vdimain.c - etv_timer gets an int argument (LVL)
 - bios.c - commented out illegal error setting, as I don't think it does the
-  right thing [changing a move SR, to CCR, is done pby the priv stuff] (LVL)
+  right thing [changing a move SR, to CCR, is done by the priv stuff] (LVL)
+
+12. Oct. 2002
+- merged tools/keytbl2c and util/dumpkbd.c - now dumpkbd.prg directly 
+  generates keyb_xx.h (LVL)
+- Makefile - fixed a bug in make depend (LVL)
